--- a/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
+++ b/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quest.cs" />
     <Compile Include="Retriever.cs" />
+    <Compile Include="SpellReader.cs" />
+    <Compile Include="SpellTips.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
