--- a/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
+++ b/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
@@ -53,13 +53,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crawler.cs" />
-    <Compile Include="HtmlRetriever.cs" />
+    <Compile Include="QuestReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quest.cs" />
     <Compile Include="Retriever.cs" />
     <Compile Include="ItemReader.cs" />
     <Compile Include="SpellReader.cs" />
+    <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Tooltip.cs" />
   </ItemGroup>
   <ItemGroup>
