--- a/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
+++ b/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Script.cs" />
     <Compile Include="Readers\JournalReader.cs" />
     <Compile Include="Readers\QuestCacheReader.cs" />
+    <Compile Include="Readers\QuestieMerger.cs" />
     <Compile Include="Readers\QuestieUnitReader.cs" />
     <Compile Include="Readers\ScriptReader.cs" />
     <Compile Include="Readers\UnitReader.cs" />
