[Tools] Feature updates 1. Fixed WotLK quest cache parse. 2. Now able to output both questie and WoWeuCN data format.

--- a/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
+++ b/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Retriever.cs" />
     <Compile Include="Readers\ItemReader.cs" />
     <Compile Include="Readers\SpellReader.cs" />
+    <Compile Include="Utils\Options.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Models\Tooltip.cs" />
   </ItemGroup>
