[Tools] Added achievement data reader

--- a/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
+++ b/QuestTextRetriever/QuestTextRetriever/QuestTextRetriever.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Readers\QuestieMerger.cs" />
     <Compile Include="Readers\QuestieUnitReader.cs" />
     <Compile Include="Readers\ScriptReader.cs" />
+    <Compile Include="Readers\AchievementReader.cs" />
     <Compile Include="Readers\UnitReader.cs" />
     <Compile Include="Readers\QuestReader.cs" />
     <Compile Include="Program.cs" />
