--- a/TextContentToolkit/TextContentToolkit/TextContentToolkit.csproj
+++ b/TextContentToolkit/TextContentToolkit/TextContentToolkit.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Models\Tooltip.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
